@@ -2,17 +2,19 @@
 Hash: SHA1
 
 DIST frozen-bubble-2.2.0.tar.bz2 20585572 RMD160 1bbe0163c28421c497979c85a98f64a98174c780 SHA1 df5a8c839a76fd662777925b2eb80fcb8adf3fa6 SHA256 dada92322ef3adb75df7a4270b2e76c572c3f8e42006ed3a5aaeefa68fcaa5b7
+DIST frozen-bubble-2.2.1-beta1.tar.bz2 22424798 RMD160 1b7f6204c302a1f1b98ce19bb1ffaf309d8e0837 SHA1 f3d320e701afbab36c48524fe00d331aaab0257f SHA256 c5be403ccb71543dab1aeb7d5ae311e18693f79937fb9159469cdad0abf18ac4
 EBUILD frozen-bubble-2.2.0.ebuild 1643 RMD160 f59a09e9397b88c1343925f399648bb88291ed0a SHA1 7d7647d5ea7add0b8c66b1ef100ec8551939bc8e SHA256 f984ff8159c1249137bd93997ee8eccf81847d47b00e285b9aa571d352152f0f
-MISC ChangeLog 9141 RMD160 45692e9d263849c90b0f6db741e68631fd865d72 SHA1 3a483c5862419c42ea45c104830525bc50d9d78e SHA256 deabaacca944ec46dc771c0b8341f5eb4b6de330faa68940d26268bea891a1a7
+EBUILD frozen-bubble-2.2.1_beta1.ebuild 1857 RMD160 f2ec7ccb85e0b60304e0e154918fc343403b5d2e SHA1 925adfdc7fc96934705d564c5248a01ef7181d4d SHA256 9b63e18c7ddfcc650868ae71cce92f189b811805df43f3a118cd0fbdc3c625e1
+MISC ChangeLog 9487 RMD160 9a9b66e1bc5f75a6bab1f0c9b9d5fba247396bfe SHA1 31bce9dc5e6d94470e213879b23d79db143fe5f7 SHA256 414efeeca52489bf7b3b5761ba67531350d5eb1b5c1c9708b7f49afddfac5215
 MISC metadata.xml 449 RMD160 b8f34def5d742659506da917a43d62bc670167af SHA1 a13893053f32b670f7ed6c49d666cb9631f49c11 SHA256 63337ec457363a86ff999264ec10ee614f5156160a57371d278122c167470602
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPJxpCAAoJEEdUh39IaPFNtGQH/iPzLMBpZZx9XpiAP+0fLNZu
-lrED4AsU2MFF8wBQ5OOKnAriGAp09V9+wePp/tLmo+yBSzbF4SFyPSUA2nin1U9w
-qMInmeeIvTIYNDGicJgGEzoJ80TRg0PBohZOguDVeG+OC9fMY0dqNLaafQB2rn9H
-9vkc1O6N8GQW+mx7W2sT7Y7I9f/cI1Qa2NIwczG4RFOvA3IajNXHWorPmujnpNlT
-AiavekNQyjZDYYvUwP0Ym0JIO8MrdFnC8C7mtHsVzTkJf6ooEHzpsTNrWZlwtPpc
-epBvx0deAP52vi5ZTrtsvJM6AU0P/MDto/BoRAYsDz5oexqEvV3UWHHDM2MzVZM=
-=BF/P
+iQEcBAEBAgAGBQJPQyLrAAoJEEdUh39IaPFNyqcH/RGzzQQ+trftJy57amdTnocZ
+5i5j5ZW5DdMzQiCHmVz8c5d1T+pirda3slKF9jN1vhcjYdGYX3B12ZM4rugZvrgo
+llLUs3xRJlALBq/FXkQQsQLb1dVleh5N4GKBekJKGumpv10GiOfq2Pl77U2fDNFB
+34Yvh4JkHwT2GCqoRb1RkyqpmThUw0PIqWI+BGEjGsmmNtIwrxF6eF5CAw1n4zaH
+NDbFQwfTrsjPXBtF6XTHYhchU6I5LwvWBjcRzgp7qevmD+Qo0qwGAihOmzWmisLt
+adiVfg+Nn/BxCm6EVmDhWuhrPzj4vWv/Dpu6m8suHRZTVG56xrkaqUyprBq8Fy8=
+=l+i2
 -----END PGP SIGNATURE-----
