@@ -1,6 +1,16 @@
 # ChangeLog for games-arcade/frozen-bubble
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.41 2012/01/30 22:33:57 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.44 2012/02/21 04:51:50 ssuominen Exp $
+
+  21 Feb 2012; Samuli Suominen <ssuominen@gentoo.org>
+  frozen-bubble-2.2.1_beta1.ebuild:
+  Missing dev-perl/File-Slurp and dev-perl/IPC-System-Simple from dependencies.
+
+*frozen-bubble-2.2.1_beta1 (20 Feb 2012)
+
+  20 Feb 2012; Samuli Suominen <ssuominen@gentoo.org>
+  +frozen-bubble-2.2.1_beta1.ebuild:
+  Version bump wrt #388911 by Ralf Mayer
 
   30 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
   frozen-bubble-2.2.0.ebuild:
