@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/rpm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.126 2012/02/18 20:14:40 sochotnicky Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.127 2012/02/20 20:46:09 sochotnicky Exp $
+
+  20 Feb 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
+  rpm-4.9.1.2.ebuild:
+  Fix #404479 - failed installation when USE="doc" was used
 
 *rpm-4.9.1.2 (18 Feb 2012)
 
